[tool.poetry]
name = "camprofiler"
version = "0.0.1"
description = "This guy is too lazy, nothing is written here..."
authors = ["Hugo Ji <yugeji2@illinois.edu>"]
packages = [
    { include = "camprofiler" },
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.5"
matplotlib = "^3.6.2"

[tool.poetry.dev-dependencies]
numpy = "^1.23.5"
matplotlib = "^3.6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
