[tool.poetry]
name = "camprofiler"
version = "0.1.0"
description = ""
authors = ["jihugo <yugeji2@illinois.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.1"
sympy = "^1.11.1"
numpy-stl = "^3.0.0"

[tool.poetry.group.dev.dependencies]
matplotlib = "^3.6.3"

[tool.pylint.main]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
